--- a/app.json
+++ b/app.json
@@ -53,7 +53,28 @@
           "photosPermission": "The app accesses your photos to save it in the app."
         }
       ],
-      "expo-sqlite"
+      [
+        "expo-sqlite",
+        {
+          "enableFTS": true,
+          "useSQLCipher": true,
+          "android": {
+            "enableFTS": false,
+            "useSQLCipher": false
+          },
+          "ios": {
+            "customBuildFlags": [
+              "-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"
+            ]
+          }
+        }
+      ],
+      [
+        "expo-asset",
+        {
+          "assets": ["./assets/images/not-found.jpg"]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
