--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "build": "eas build --platform android",
     "lint": "expo lint"
   },
   "jest": {
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@sentry/react-native": "~6.3.0",
     "buffer": "^6.0.3",
     "deepmerge": "^4.3.1",
     "drizzle-orm": "^0.39.3",
@@ -59,12 +60,19 @@
     "@types/react-test-renderer": "^18.3.0",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-kit": "^0.30.4",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1"
+    "typescript": "^5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
