--- a/app.json
+++ b/app.json
@@ -75,6 +75,18 @@
         }
       ],
       [
+        "expo-splash-screen",
+        {
+          "backgroundColor": "#000000",
+          "image": "./assets/myappicon.png",
+          "dark": {
+            "image": "./assets/myappicon.png",
+            "backgroundColor": "#000000"
+          },
+          "imageWidth": 200
+        }
+      ],
+      [
         "@sentry/react-native/expo",
         {
           "organization": "${SENTRY_ORG}",
